# council-engine

./: .env.example  .gitignore  README.md  alembic.ini  config.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: documents.py  evals.py  projects.py  queries.py
app/core/: config.py  interfaces.py  logging.py
app/db/: bootstrap.py  models.py  session.py
app/evaluation/: dataset.py  grounding_metrics.py  metrics.py  runner.py
app/generation/: answer_generator.py  llm_client.py  prompts.py  response_builder.py  schema_validator.py  structured_generation.py  verifier.py
app/ingestion/: indexer.py  loaders.py  normalizer.py  passage_builder.py  sectioner.py  window_builder.py
app/retrieval/: context_expander.py  dense.py  evidence_bundle.py  hybrid.py  lexical.py  pipeline.py  query_processing.py  reranker.py
app/schemas/: api.py
app/services/: document_service.py  project_service.py  query_service.py
data/evals/: questions.json  quran_eval_v1.json
docs/: COUNCIL_FULL_ARCHITECTURE.md  DECISIONS.md  MASTER_BRIEF.md  PROGRESS.md  TASK_TEMPLATE.md  review_bundle_creation.md  step_1_mvp_core_architecture_spec.md
docs/old/: step_2_retrieval_evaluation_design_spec.md  step_3_prompt_output_schema_spec.md
docs/review/: REVIEW_BUNDLE.md
docs/tasks/: TASK_hybrid_weighting_and_reranker_tuning.md  TASK_lexical_recall_improvement.md  TASK_model_upgrade_and_eval.md  TASK_retrieval_debug_and_eval_loop.md  (+1 more)
scripts/: download_quran.py  run_eval.py  run_model_eval.py
tests/: conftest.py
tests/unit/: test_hybrid.py  (+10 more)
ui/: app.js  index.html  style.css
(+161 files in other folders)
